--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 <body>
     <form>
     <h1>Forms</h1>
-    <label>Name</label>
+    <label>Name:</label>
     <input type="text" placeholder="Enter Your Name" required />
     <br />
     <br />
-    <label>Email-ID</label>
+    <label>Email-ID:</label>
     <input type="Email" placeholder="Email">
     <br />
     <br />
-    <label>Password</label>
+    <label>Password:</label>
     <input type="password" placeholder="Password">
     <br />
     <br />
 
     <!-- Radio Button -->
-    <h3>Language</h3>
-    <input type="radio" name="ram" id=""/>HTML<br>
-    <input type="radio" name="ram" id=""/>CSS<br>
-    <input type="radio" name="ram" id=""/>JS<br>
+    <P>Language</P>
+    <input type="radio" name="language" id=""/>HTML<br>
+    <input type="radio" name="language" id=""/>CSS<br>
+    <input type="radio" name="language" id=""/>JS<br>
 
    <!-- Checkbox -->
-    <h3>Course</h3>
-    <input type="checkbox" name="ram" id=""/>Java Stack<br />
-    <input type="checkbox" name="ram" id=""/>Data Science<br />
-    <input type="checkbox" name="ram" id=""/>Mern Stack<br />
+    <P>Course</P>
+    <input type="checkbox" name="language" id=""/>Java Stack<br />
+    <input type="checkbox" name="language" id=""/>Data Science<br />
+    <input type="checkbox" name="language" id=""/>Mern Stack<br />
 
     <!-- Dropdown  -->
-    <h3>Field:</h3>
+    <P>Field:</P>
     <select name="dropdown">
         <option value="CSS">CSS</option>
         <option value="HTML">HTML</option>
@@ -65,5 +65,5 @@
 </form>
   
 </body>
-<a href="text.html">Click Here For Table File </a>
+<a href="./text.html">Click Here For Table File </a>
 </html>
