--- a/text.html
+++ b/text.html
@@ -96,7 +96,7 @@
         </tr>
     </table>
 </body>
-<a href="index.html">Click Here For Form Page</a>
+<a href="./index.html">Click Here For Form Page</a>
 <br />
 <br />
 </html>
